[gd_scene load_steps=7 format=2]

[ext_resource path="res://tempAssets/sheet.playerShip1_red.atlastex" type="Texture" id=1]
[ext_resource path="res://scenes/players/Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/players/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/players/vfx/thrusters/MainThruster.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/players/vfx/thrusters/SmallThruster.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.9548
height = 11.5388

[node name="Player" type="Area2D"]
position = Vector2( 466.876, 243.715 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 3 )

[node name="Ship" type="Sprite" parent="."]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="BulletContainer" type="Node" parent="."]

[node name="BulletSpawnPoint" type="Position2D" parent="."]
position = Vector2( 0, -40 )

[node name="FireRate" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="ThrusterParticles" type="Node2D" parent="."]

[node name="ForwardThrusterParticle" parent="ThrusterParticles" instance=ExtResource( 4 )]
position = Vector2( 0, 15 )
emitting = false

[node name="ReverseThrusterParticle" parent="ThrusterParticles" instance=ExtResource( 5 )]
position = Vector2( 0, -15 )
rotation = -3.14159
emitting = false

[node name="PortThrusterParticle" parent="ThrusterParticles" instance=ExtResource( 5 )]
position = Vector2( -5, -8 )
rotation = -4.71239
emitting = false

[node name="StarboardThrusterParticle" parent="ThrusterParticles" instance=ExtResource( 5 )]
position = Vector2( 5, -8 )
rotation = 4.71239
emitting = false
[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
